# strawberry

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake.sh
Strawberry/: .gitignore  CMakeLists.txt  Makefile  Strawberry.cpp  alignments.cpp  alignments.h  assembly.cpp  assembly.h  common.cpp  common.h  contig.cpp  contig.h  estimate.cpp  fasta.cpp  fasta.h  genome.cpp  genome.h  gff.cpp  gff.h  logger.cpp  logger.hpp  qp.cpp  read.cpp  read.h
Strawberry/include/: alignments.h  assembly.h  common.h  contig.h  estimate.h  fasta.h  gff.h  logger.hpp  qp.h  read.h
Strawberry/include/lemon/include/lemon/: config.h
Strawberry/src/: CMakeLists.txt  Strawberry.cpp  alignments.cpp  assembly.cpp  common.cpp  contig.cpp  estimate.cpp  gff.cpp  logger.cpp  read.cpp
include/: StrawberryConfig.hpp  alignments.h  assembly.h  bias.hpp  clustering.h  common.h  contig.h  estimate.h  estimate.hpp  fasta.h  gff.h  interval.hpp  isoform.h  kmer.h  logger.hpp  read.h  read.hpp  utils.h  version.hpp
src/: CMakeLists.txt  Strawberry.cpp  alignments.cpp  assembly.cpp  bias.cpp  common.cpp  contig.cpp  estimate.cpp  fasta.cpp  gff.cpp  logger.cpp  read.cpp
